# omnimodem

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  Makefile  README.md
.github/workflows/: ci.yml
android/: README.md  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
clients/omnimodem-client/: README.md  generate.sh  go.mod  main.go
clients/omnimodem-tui/: gen.sh  go.mod  go.sum
crates/adsb_bench/: Cargo.toml
crates/adsb_bench/src/: lib.rs  main.rs
crates/adsb_bench/testdata/: README.md  adsb_ci_clip.iq
crates/adsb_bench/tests/: regression_gate.rs
crates/dsp/: Cargo.toml
crates/dsp/benches/: hotpath.rs
crates/dsp/src/: ensemble.rs  lib.rs  mode.rs  testutil.rs  types.rs
crates/dsp/src/fec/: ccir476.rs  conv.rs  crc.rs  fano.rs  fht.rs  ft8_tables.rs  golay.rs  gray.rs  interleave.rs  js8_tables.rs  ldpc.rs  ldpc_fst4.rs  ldpc_js8.rs  ldpc_msk144.rs  llr.rs  mod.rs  nrzi.rs  osd.rs  rs.rs  rs_gf64.rs  scramble.rs  slicer.rs
crates/dsp/src/framing/: ax25.rs  baudot.rs  dominoex_varicode.rs  fsq_varicode.rs  fx25.rs  hdlc.rs  hellfont.rs  ifkp_varicode.rs  il2p.rs  js8_callsign.rs  js8_frames.rs  js8_message.rs  jsc.rs  message77.rs  mod.rs  morse.rs  pack77.rs  thor_varicode.rs  varicode.rs
crates/dsp/src/frontend/: agc.rs  complex_stft.rs  detector.rs  fir.rs  iq.rs  limiter.rs  mod.rs  modulate.rs  msk.rs  multicarrier.rs  nbfm.rs  nco.rs  noise.rs  ofdm.rs  osc.rs  resample.rs  rsid.rs  sdr_demod.rs  spectrum.rs  squelch.rs  stft.rs
crates/dsp/src/modes/: adsb.rs  afsk1200.rs  contestia.rs  cw.rs  dominoex.rs  fsk_util.rs  fsq.rs  fsq_pic.rs  fst4.rs  ft4.rs  ft8.rs  hell.rs  ifk33.rs  ifkp.rs  ifkp_pic.rs  js8.rs  jt4.rs  jt65.rs  jt9.rs  mfsk.rs  mfsk_pic.rs  mod.rs  msk144.rs  mt63.rs  navtex.rs  olivia.rs  picture.rs  psk.rs  psk31.rs  rtty.rs  sstv.rs  thor.rs  thor_pic.rs  throb.rs  wefax.rs  wspr.rs
crates/dsp/src/modes/adsb/: crc.rs  demod2400.rs  message.rs  ppm.rs  roster.rs  tests.rs  track.rs  tracker.rs
crates/dsp/src/modes/fsq/: directed.rs
crates/dsp/src/sync/: candidate.rs  costas.rs  costas_array.rs  dcd.rs  dpll.rs  mod.rs  syncword.rs  timing.rs
crates/dsp/tests/: alloc_guard.rs  ber.rs  kat.rs  loopback.rs  nonstandard_call_encoding.rs  roundtrip.rs  snapshots.rs
crates/dsp/tests/vectors/: README.md  afsk1200_frame.snap  afsk_bell202.snap  cw_cq.snap  diff_bpsk.snap  dominoex_varicode.json  feldhell.json  fsk2_rtty.snap  fsq_varicode.json  fsqpic.json  fst4_ldpc.json  ft8_message.snap  ft8_reference.json  gfsk_8fsk.snap  ifkp_varicode.json  ifkppic.json  js8_jsc.json  js8_ldpc.json  js8_ref_normal.i16  js8_ref_turbo.i16  js8_symbols.json  jt4_tones.json  mfsk.json  mfsk16.snap  mfskpic.json  msk144_reference.json  mt63.json  navtex_ccir476.json  psk31_message.snap  psk_bpsk.json  psk_interleave.json  psk_mfsk.json  psk_qpsk.json  psk_robust.json  rsid.json  rtty_message.snap  sstv_scottie1_rx.json  sstv_scottie1_tx.json  thor_varicode.json  thorpic.json  (+1 more)
crates/dsp/tests/vectors/jt65/: golden.txt
crates/omnimodem/: Cargo.toml
crates/omnimodem/src/: config.rs  ids.rs  lib.rs  main.rs  proto.rs
crates/omnimodem/src/audio/: backend.rs  fanout.rs  file.rs  mod.rs  rtlsdr.rs  stdin.rs
crates/omnimodem/src/audio/sdr/: mod.rs  pipeline.rs  rtl_tcp.rs  usb.rs  usb_regs.rs
crates/omnimodem/src/authz/: uds.rs
crates/omnimodem/src/core/: adsb.rs  event.rs  gain.rs  mod.rs  rx_worker.rs  spectrum.rs  tx_worker.rs
crates/omnimodem/src/device/: cache.rs  enumerate.rs  hotplug.rs  mod.rs
crates/omnimodem/src/grpc/: convert.rs  subscribe.rs
crates/omnimodem/src/kiss/: codec.rs  listener.rs  mod.rs
crates/omnimodem/src/mode/: mod.rs  registry.rs
crates/omnimodem/src/ptt/: cm108.rs  interlock.rs  lease.rs  registry.rs  serial.rs  udev.rs
crates/omnimodem/tests/: e2e.rs  e2e_hardware.rs  rtl_tcp_sdr.rs  sdr_control.rs  subscribe.rs  unary.rs
crates/omnimodemd/: Cargo.toml  build.rs
crates/omnimodemd/examples/: loopback_server.rs
crates/omnimodemd/src/: ids.rs  lib.rs  main.rs  proto.rs
crates/omnimodemd/src/android/: audio.rs  mod.rs  upcall.rs
crates/omnimodemd/src/audio/: alsa.rs  backend.rs  cpal_backend.rs  file.rs  identity.rs  mod.rs  resample.rs  rtlsdr.rs
crates/omnimodemd/src/authz/: mod.rs  tls.rs
crates/omnimodemd/src/core/: clock.rs  command.rs  error.rs  event.rs  mod.rs  rx_worker.rs  tx_worker.rs
crates/omnimodemd/src/device/: cache.rs  enumerate.rs  hotplug.rs  mod.rs
crates/omnimodemd/src/grpc/: convert.rs  mod.rs  service.rs  subscribe.rs
crates/omnimodemd/src/kiss/: listener.rs
crates/omnimodemd/src/metrics/: mod.rs  prometheus.rs
crates/omnimodemd/src/mode/: mod.rs  picture_tx.rs  registry.rs
crates/omnimodemd/src/persist/: mod.rs
crates/omnimodemd/src/ptt/: android.rs  cm108_hidapi.rs  gpio.rs  mod.rs  none.rs  registry.rs  rigctld.rs  sequence.rs  serial_win.rs  udev.rs
crates/omnimodemd/src/supervisor/: channel.rs  device.rs  mod.rs  ptt.rs
crates/omnimodemd/tests/: e2e.rs  e2e_hardware.rs  rtl_tcp_sdr.rs  sdr_control.rs  subscribe.rs  unary.rs
crates/wavtool/: Cargo.toml  README.md
docs/: cross-platform-testing.md  grpc-api.md  running.md  sdr-rtl-tcp.md  sdr-rtl-usb.md
docs/ci/: release.yml.ci-workflow
docs/design/: 2026-06-17-omnimodem-design.md  2026-06-23-omnimodem-tui-client.md  2026-06-23-omnimodem-waterfall-spectrum-api.md  2026-06-24-omnimodem-tui-ux-redesign.md  2026-07-06-rtl-tcp-sdr-input-design.md  2026-07-10-adsb-mode-design.md  2026-07-12-native-rtl-sdr-design.md
docs/plans/: 2026-06-18-omnimodem-cross-platform-ptt-and-audio.md  2026-06-18-omnimodem-phase1-grpc-control-plane.md  2026-06-18-omnimodem-phase2-audio-devices-and-ptt.md  2026-06-19-omnimodem-phase3-mode-scaffolding-and-building-blocks.md  2026-06-20-omnimodem-phase4-first-modes.md  2026-06-21-omnimodem-phase5-breadth-integration-safety.md  2026-06-23-omnimodem-flexible-audio-device-binding.md  2026-06-23-omnimodem-phase6-kiss-grpc-translator.md  2026-06-23-omnimodem-runtime-audio-gain-control.md  (+32 more)
proto/: VERSIONING.md  omnimodem.proto
(+193 files in other folders)
