[workspace]
members = ["crates/omnimodemd"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/chrissnell/omnimodem"

[workspace.dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "signal", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
async-stream = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
libc = "0.2"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic-build = "0.12"

# Phase 2: audio + PTT hardware
cpal = "0.17"
nusb = "0.1"
hidapi = { version = "2.6", default-features = false, features = ["linux-native-basic-udev"] }
nix = { version = "0.29", features = ["fs", "ioctl"] }
gpiocdev = "0.7"
