[package]
name = "omnimodem"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "omnimodem"
path = "src/main.rs"

[dependencies]
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
async-stream.workspace = true
rusqlite.workspace = true
libc.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
cpal.workspace = true
ring = "0.17"
omnimodem-dsp = { path = "../dsp" }

[target.'cfg(not(target_os = "android"))'.dependencies]
nusb.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true
hidapi.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
gpiocdev.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
hyper-util = { version = "0.1", features = ["tokio"] }
