[package]
name = "omnimodemd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "omnimodemd"
path = "src/main.rs"

[dependencies]
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
async-stream.workspace = true
rusqlite.workspace = true
libc.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
tonic-build.workspace = true
